# xmsr

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  LICENSE  README.md  link_pyqt_styles.py  pyproject.toml
examples/: 01_single_variable.py  02_multi_variable.py  03_paths_and_metadata.py  04_multiparam_derived_coords.py  04_multiparam_multiindex.py  05_multiparam_derived_coords.py  06_live_plotting.py  07_manual_operator_step.py  gui_test.py  measurement.py
src/xmsr/: __init__.py  gui.py  measurement.py  metadata_model.py  notebook.py  notebook_integration.py  qt_integration.py  runner.py  shared.py  test_async_widget.py
tests/: test_measurement_templates.py
