[project]
name = "xmsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wkrokosz", email = "w.krokosz@cent.uw.edu.pl" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>1.25",
    "tqdm>=4.67.1",
    "xarray<2025.5.0",
    "zarr<3",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.13.3",
]
gui = [
    "coloredlogs>=15.0.1",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "qtpy>=2.4.3",
]
notebook = [
    "hvplot>=0.12.1",
]

[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false
