[project]
name = "xmsr"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["measurement", "automation", "data acquisition", "xarray", "zarr"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",   
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
    { name = "Wiktor Krokosz", email = "krokosik@pm.me" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>1.25",
    "tqdm>=4.67.1",
    "xarray<2025.5.0",
    "zarr<3",
]

[project.optional-dependencies]
notebook = [
    "holoviews>=1.22.1",
    "hvplot>=0.12.2",
    "ipywidgets>=8.1.8",
]

[build-system]
requires = ["uv_build>=0.8.23,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.13.3",
]

[[tool.uv.index]]
name = "gitea"
url = "https://git.qodl.eu/api/packages/wkrokosz/pypi/simple/"
publish-url = "https://git.qodl.eu/api/packages/wkrokosz/pypi"
explicit = true
